src/assets/scss/components/_main-body.scss
.no-padding {
	padding: 0 !important;
}

.hero {
	@extend .no-padding;
	margin: 0 !important;

	img {
		width: 100%;
		margin: 0 !important;
		padding: 0 !important;
	}

	a {
		margin: 0 !important;
		padding: 0 !important;
	}

	th {
		height: 281px;
		margin: 0 !important;
		padding: 0 !important;
	}

}

.email-body {
	margin: 0 !important;
	padding: 0 !important;
}

.buffer {
		background-color: $secondary-color;
		margin-bottom: 0 !important;
		margin-top: 0 !important;
		max-width: 16px !important;
		padding-bottom: 0 !important;
		padding-top: 0 !important;
		width: 16px !important;
	}

.infostories-logo {
	width: 10%;
	}

.title {
	border-bottom: 1px solid $primary-color;
	color: $primary-color;
	padding-bottom: 20px;
}

.paragraph {
	color: $white;
}

.paragraph-footer {
	color: #cacaca;
	font-size: $small-font-size;

	a {
		color: #cacaca;
	}

}

.ilo-logo {
	width: 40%;
}

.footer {
		@extend .no-padding;
}

.bottom-margin {
	background-color: $secondary-color;
	height: 30px;
}

